Fix more jdk21 build warnings